@@ -86,6 +86,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 249
     END
+
+    IDD_PECLR, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 267
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 249
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -138,6 +146,17 @@ CAPTION "Exports"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,6,288,246
+END
+
+IDD_PECLR DIALOGEX 0, 0, 274, 256
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "CLR"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    LTEXT           "Runtime Version:",IDC_STATIC,7,7,55,8
+    LTEXT           "Static",IDC_RUNTIMEVERSION,78,7,189,8
+    LTEXT           "Flags:",IDC_STATIC,7,19,20,8
+    EDITTEXT        IDC_FLAGS,76,19,191,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
 END
 
 
